# fem_2d

./: .gitignore  Cargo.toml  LICENSE  README.md  paper.bib  paper.md
.github/workflows/: rust.yml
libs/basis/: Cargo.toml
libs/basis/src/: basis_fn.rs  lib.rs
libs/basis/src/basis_fn/: glq.rs  kol.rs  max_ortho.rs
libs/domain/src/: lib.rs  vector_space_2d.rs
libs/eigensolver/: Cargo.toml  build.rs
libs/eigensolver/cpp_src/: slepc_wrapper.cc  slepc_wrapper.h
libs/eigensolver/cpp_src/gep_module/: makefile  solve_gep  solve_gep.cpp
libs/eigensolver/src/: eigenproblem.rs  lib.rs  slepc_wrapper.rs
libs/eigensolver/src/eigenproblem/: aij_matrix.rs  sparse_matrix.rs
libs/fem_domain/: Cargo.toml
libs/fem_domain/src/: domain.rs  lib.rs
libs/fem_domain/src/domain/: dof.rs  mesh.rs
libs/integration/: Cargo.toml
libs/integration/src/: fields.rs  integrals.rs  lib.rs  matrix_filling.rs
libs/integration/src/integrals/: curl_products.rs  glq_integration.rs  inner_products.rs
libs/sparse_matrix/: Cargo.toml
libs/sparse_matrix/src/: aij_matrix.rs  lib.rs  sparse_matrix.rs  sparse_matrix_btree.rs
rm_figs/: contributing.md
src/: basis.rs  domain.rs  fem_domain.rs  fem_problem.rs  integration.rs  lib.rs  linalg.rs  matrix_math.rs
src/basis/: shape_fns.rs
src/domain/: dof.rs  fields.rs  mesh.rs
src/domain/dof/: basis_spec.rs
src/domain/mesh/: edge.rs  elem.rs  element.rs  h_refinement.rs  node.rs  p_refinement.rs  primitives.rs  space.rs
src/domain/mesh/primitives/: edge.rs  elem.rs  element.rs  node.rs
src/fem_domain/: basis.rs  domain.rs
src/fem_domain/basis/: hierarchical_basis_fns.rs  shape_fns.rs
src/fem_domain/domain/: dof.rs  fields.rs  mesh.rs
src/fem_domain/domain/dof/: basis_spec.rs
src/fem_domain/domain/mesh/: edge.rs  elem.rs  element.rs  (+3 more)
src/fem_problem/: galerkin.rs  integration.rs  linalg.rs
src/fem_problem/integration/: glq.rs  integrals.rs
src/fem_problem/linalg/: nalgebra_solve.rs  slepc_solve.rs
src/integration/: glq.rs  integrals.rs
src/integration/integrals/: glq.rs  glq_integration.rs
src/linalg/: nalgebra_solve.rs  slepc_gep_link.rs  slepc_solve.rs  sparse_matrix.rs
src/matrix_math/: galerkin.rs  integration.rs
src/matrix_math/integration/: integrals.rs
test_input/: test_mesh_a.json  test_mesh_b.json  test_mesh_c.json
test_output/: electric_field_solution.vtk  integration_test_mesh.json  mesh_b_copy.json  mesh_b_fields.vtk  mesh_b_refined.json  mesh_c_copy.json
(+8 files in other folders)
