[package]
name = "fem_2d"
version = "0.1.0"
edition = "2021"
authors = ["Jeremiah Corrado"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jeremiah-corrado/fem_2d/"
description = "2D Finite Element Solver"

[features]
nighly = ["max_ortho_basis"]
max_ortho_basis = []

[dependencies]
rayon="1.5.1"
bytes = "1.1.0"
nalgebra = "0.30.1"
smallvec="1.7.0"
num-complex="0.4.0"
json="0.12.4"
