[package]
authors = ["Jeremiah Corrado"]
categories = ["Science", "Simulation", "Mathematics"]
description = "2D Finite Element Method Toolkit"
edition = "2021"
keywords = ["fem", "math", "finite element analysis", "simulation", "solver"]
license = "MIT"
name = "fem_2d"
readme = "README.md"
repository = "https://github.com/jeremiah-corrado/fem_2d/"
version = "0.1.0"

[features]
max_ortho_basis = []
nighly = ["max_ortho_basis"]

[dependencies]
bytes = "1.1.0"
json = "0.12.4"
nalgebra = "0.30.1"
num-complex = "0.4.0"
rayon = "1.5.1"
smallvec = "1.7.0"
