[package]
name = "integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.fem_domain]
path="../fem_domain/"

[dependencies.basis]
path="../basis/"

[dependencies.eigensolver]
path="../eigensolver"

[dependencies]
rayon="1.5.1"